--- a/index.html
+++ b/index.html
@@ -5,7 +5,41 @@
         <title>Run Buddy</title>
     </head>
     <body>
-        <h1>Run Buddy</h1>
-        What We Do What You Do Your Trainers Reach Out
+
+        <!-- Navigation -->
+        <header>
+            <h1>Run Buddy</h1>
+        </header>
+
+        <!-- Jumbotron -->
+        <section>
+
+        </section>
+
+        <!-- What We Do section -->
+        <section>
+            <h2>What We Do</h2>
+        </section>
+
+        <!-- What You DO section -->
+        <section>
+            <h2>What You Do</h2>
+        </section>
+
+        <!-- Meet The Trainers section -->
+        <section>
+            <h2>Your Trainers</h2>
+        </section>
+
+        <!-- Reach Out section -->
+        <section>
+            <h2>Reach Out</h2>
+        </section>
+
+        <!-- Footer -->
+        <footer>
+            <h2>❤️ Made with love by Run Buddy</h2>
+        </footer>
+           
     </body>
 </html>
