--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </header>
 
         <!-- Jumbotron/hero -->
-        <section>
+        <section class="hero">
             <div>
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
