--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
         <!-- Jumbotron/hero -->
         <section class="hero">
-            <div>
+            <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
             <!-- Add form element -->
                 <form>
                     <label for="name">Enter full name</label>
-                    <input type="text" placeholder="Your Name" name="name" id="name" />
+                    <input class="form-input" type="text" placeholder="Your Name" name="name" id="name" />
                     <label for="email">Enter email address</label>
-                    <input type="email" placeholder="Email Address" name="email" id="email" />
+                    <input class="form-input" type="email" placeholder="Email Address" name="email" id="email" />
                     <label for="phone">Enter a telephone number</label>
-                    <input type="tel" placeholder="Your Phone Number" name="phone" id="phone" />
+                    <input class="form-input" type="tel" placeholder="Your Phone Number" name="phone" id="phone" />
                     <!-- Adding radio button -->
                     <p>
                         Have you worked out with a trainer before?
