centered what we do text and set bottom border and margins

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <!-- End of Jumbotron/hero -->
 
         <!-- What We Do section -->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ea illum ullam, omnis sequi labore iusto repellat voluptates dolore provident repudiandae iste itaque, neque nemo et quidem, architecto quibusdam rerum.
             </p>
         </section>
 
