finished meet the trainers section

--- a/index.html
+++ b/index.html
@@ -109,8 +109,38 @@
         </section>
 
         <!-- Meet The Trainers section -->
-        <section id="your-trainers">
-            <h2>Your Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet the Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi dolore fugit possimus. Aspernatur, et eaque illo nostrum porro dignissimos placeat incidunt alias quod obcaecati! Odit dolores perferendis ex illum labore.
+                    </p>
+                </div>
+            </article>
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae soluta dicta, provident est cumque blanditiis minus eius, architecto non sequi suscipit quos, consectetur quidem. Rerum consequuntur quam quod aliquam nobis!
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis rem harum quam et earum id sint, molestias nobis nesciunt accusantium? Consequatur ipsum fuga et ut culpa itaque iste dolore quam.
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- Reach Out section -->
