added legal page skeleton

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Navigation -->
         <header>
             <h1>
-                <a href="/">Run Buddy</a>
+                <a href="index.html">Run Buddy</a>
             </h1>
             <nav>
                 <!-- Unordered List element -->
@@ -175,7 +175,7 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy</h2>
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./legal.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
