add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 
         <!-- Jumbotron/hero -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quaerat delectus sit cum et nemo iusto tempore dolore qui? Exercitationem sint culpa distinctio labore doloribus nostrum harum voluptates, ad voluptatem.
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
