--- a/index.html
+++ b/index.html
@@ -78,15 +78,23 @@
 
         <!-- What We Do section -->
         <section id="what-we-do" class="intro">
+            <div class="flex-row">
             <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+            
+            <div class="flex-row">
             <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ea illum ullam, omnis sequi labore iusto repellat voluptates dolore provident repudiandae iste itaque, neque nemo et quidem, architecto quibusdam rerum.
             </p>
+            </div>
+
         </section>
 
         <!-- What You DO section -->
         <section id="what-you-do" class="steps">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
 
             <div>
                 <!-- inserting image -->
@@ -116,7 +124,10 @@
 
         <!-- Meet The Trainers section -->
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
             <h2 class="section-title primary-border">Meet the Trainers</h2>
+            </div>
+
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -151,7 +162,10 @@
 
         <!-- Reach Out section -->
         <section id="reach-out" class="contact">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
+
                 <div class="contact-info">
                     <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2954.024438282634!2d-88.60768464877282!3d42.235290879093334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f478f9d396a9f%3A0xae1d44ff504e899d!2s1004%20Grace%20Ct%2C%20Marengo%2C%20IL%2060152!5e0!3m2!1sen!2sus!4v1615094967118!5m2!1sen!2sus" 
