--- a/index.html
+++ b/index.html
@@ -197,41 +197,42 @@
             </div>
 
                 <div class="contact-info">
-                    <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2954.024438282634!2d-88.60768464877282!3d42.235290879093334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f478f9d396a9f%3A0xae1d44ff504e899d!2s1004%20Grace%20Ct%2C%20Marengo%2C%20IL%2060152!5e0!3m2!1sen!2sus!4v1615094967118!5m2!1sen!2sus" 
-                    frameborder="0"
-                    allowfullscreen="" 
-                    loading="lazy">
-                    </iframe>
-
                     <div>
+                        <h3>Run Buddy</h3>
+                        <p>
+                        Any questions or concerns before signing up? 
+                        <br />
+                        Let us know and we'll be happy to talk to you!
+                        </p>
+                        <address>
+                            55 Main Street <br />
+                            Some town, CA <br />
+                            12345 <br />
+                            P: 555.RUN.BUDZ (555.786.2839)<br />
+                            E: <a href="mailto:info@runbuddy.io">Info@runbuddy.io</a>
+                        </address>
+
+                    </div>
+
+                    <div class="contact-form">
                         <h3>Contact Us</h3>
-                        <form>
+                         <form>
                             <label for="contact-name">Your Name</label>
                             <input type="text" id="contact-name" placeholder="Your Name" />
-
+    
                             <label for="contact-message">Message</label>
                             <textarea id="contact-message" placeholder="Message"></textarea>
-
+    
                             <button type="submit">Submit</button>
                         </form>
                     </div>
 
-                    <div>
-                    <h3>Run Buddy</h3>
-                    <p>
-                    Any questions or concerns before signing up? 
-                    <br />
-                    Let us know and we'll be happy to talk to you!
-                    </p>
-                    <address>
-                        55 Main Street <br />
-                        Some town, CA <br />
-                        12345 <br />
-                        P: 555.RUN.BUDZ (555.786.2839)<br />
-                        E: <a href="mailto:info@runbuddy.io">Info@runbuddy.io</a>
-                    </address>
-                    </div>
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2954.024438282634!2d-88.60768464877282!3d42.235290879093334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f478f9d396a9f%3A0xae1d44ff504e899d!2s1004%20Grace%20Ct%2C%20Marengo%2C%20IL%2060152!5e0!3m2!1sen!2sus!4v1615094967118!5m2!1sen!2sus" 
+                        frameborder="0"
+                        allowfullscreen="" 
+                        loading="lazy"></iframe>
+
                 </div>
         </section>
 
